# time_to_explain

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  suite_cli.py
III_dbgnn_behavior/: README.md  pyproject.toml
III_dbgnn_behavior/notebooks/: 00_dbgnn.ipynb  01_train_dbgnn.ipynb  02_counterfactual.ipynb  03_higher_order_effects.ipynb  04_gcn_structure_removal.ipynb  05_ba_shapes_structure_removal.ipynb  README.md  ba_shapes_structure_removal_experiment_fixed.ipynb  gnn_structure_removal_experiment.ipynb  requirements.txt
III_dbgnn_behavior/src/: __init__.py  checkpoints.py  config.py  notebook_runner.py  pathpy_utils.py  train.py  utils.py
III_dbgnn_behavior/src/baselines/: __init__.py  phase_c.py
III_dbgnn_behavior/src/data/: __init__.py  audit.py  cache.py  covid.py  ho_triples.py  netzschleuder.py  registry.py  temporal_clusters.py
III_dbgnn_behavior/src/debruijn/: __init__.py  order2.py  translate.py
III_dbgnn_behavior/src/eval/: __init__.py  evaluate_hierarchical_explainer.py  flip_curve.py  metrics.py  runner.py  sanity.py  shuffle_gt.py  summary.py
III_dbgnn_behavior/src/explainers/: __init__.py  base.py  counterfactual.py  counterfactual_data_only.py  counterfactual_margin.py  counterfactual_search.py  epsilon_sufficient.py  gnnexplainer_debruijn.py  grad_edge_weight.py  hierarchical_dbgnn_explainer.py  integrated_gradients_edge_weight.py  random_edges.py  registry.py  statistical_counterfactual.py
III_dbgnn_behavior/src/explainers/old/: edge_weight.py  lime.py  mask_optim.py  shuffle_gt_oracle.py  stay_gt_oracle.py
III_dbgnn_behavior/src/models/: __init__.py  base.py  dbgnn.py  registry.py
III_dbgnn_behavior/src/notebook_scripts/: 01_train_dbgnn.py  02_counterfactual.py  03_higher_order_effects.py  04_gcn_structure_removal.py  05_ba_shapes_structure_removal.py  __init__.py
III_dbgnn_behavior/src/probe/: __init__.py  dbgnn_probe.py
III_dbgnn_behavior/src/viz/: __init__.py  benchmark_plots.py  counterfactual_viz.py  data_audit_plots.py  debruijn_plots.py  embeddings.py  graph_viz.py  palette.py  spectral.py
III_dbgnn_behavior/src/workflows/: __init__.py  counterfactual.py  ho_effect.py  train.py
II_instability_sources/: README.md  generate_instability_figures.py
IV_cbm_implementation/: README.md  requirements.txt
cody/: embedding.py  (+1 more)
(+552 files in other folders)
